# mycurl

./: CMakeLists.txt  build.sh  clean.sh  install.sh  run.sh
inc/: indicators.hpp
src/: curl_example.cpp
